Add the inclusion of a file that Visual Studio had added, but not saved

--- a/FSharp.Chart.Wpf/FSharp.Chart.Wpf.fsproj
+++ b/FSharp.Chart.Wpf/FSharp.Chart.Wpf.fsproj
@@ -5,6 +5,7 @@
     <TargetFramework>net471</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="FSharp.Chart.OxyPlot.fs" />
     <Compile Include="FSharp.Chart.OxyPlot.Wpf.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
