--- a/ChartDesigner/ChartDesigner.fsproj
+++ b/ChartDesigner/ChartDesigner.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="ViewModels.fs" />
     <Compile Include="Program.fs" />
     <Resource Include="MainWindow.xaml" />
+    <Resource Include="App.xaml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="paket.references" />
