--- a/ChartDesigner/ChartDesigner.fsproj
+++ b/ChartDesigner/ChartDesigner.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Models.fs" />
+    <Compile Include="Core.fs" />
     <Compile Include="ViewModels.fs" />
     <Compile Include="Program.fs" />
     <Resource Include="MainWindow.xaml" />
